--- a/web/modules/custom/related_content_block/related_content_block.services.yml
+++ b/web/modules/custom/related_content_block/related_content_block.services.yml
@@ -1,4 +1,4 @@
 services:
   related_content_block.articlehelper:
     class: Drupal\related_content_block\Services\Articlehelper
-    arguments: ['@entity_type.manager', '@database']
+    arguments: ['@entity_type.manager']
